boreal/tests/assets/invalid_files/compilation/unknown_variable3.yar
// [error: unknown variable $b]
rule a {
    condition:
        !b == 2
}
